fix: removed uneccessary lib , routes changed & swagger updated
